# dlpscan-rs

./: .dockerignore  .gitignore  BACKLOG.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  changelog.md  deny.toml  docker-compose.yml  evasion_defenses.md  siphon-c2.html
.devcontainer/: devcontainer.json  setup.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  devskim.yml  ethicalcheck.yml  evadex-quality-gate.yml  release.yml
baselines/: internal-financial.md  pci.md  phi-keywords.md  phi.md  pii-patterns.md  source-code-secrets.md
benches/: scanning.rs
crates/siphon-api/: Cargo.toml
crates/siphon-api/migrations/: 0001_init.sql  0002_findings.sql  0003_file_scans.sql  0004_retention.sql  0005_edm.sql  0006_lsh.sql  0007_evadex.sql
crates/siphon-api/src/: db.rs  main.rs
crates/siphon-core/: Cargo.toml
crates/siphon-core/src/: audit.rs  bin_lookup.rs  classification.rs  edm.rs  errors.rs  findings_ring.rs  lib.rs  lsh.rs  models.rs  overrides.rs  path_guard.rs  scoring.rs  validation.rs
crates/siphon-core/src/context/: keywords.rs  mod.rs
crates/siphon-core/src/forensics/: attribution.rs  legacy_office.rs  mod.rs  office.rs  pdf.rs  tests.rs
crates/siphon-core/src/normalize/: mod.rs
crates/siphon-core/src/patterns/: mod.rs
crates/siphon-core/src/scanner/: mod.rs
crates/siphon-fs/: Cargo.toml
crates/siphon-fs/src/: db.rs  main.rs
crates/siphon-launcher/: Cargo.toml
crates/siphon-launcher/src/: main.rs
deploy/: Dockerfile  Dockerfile.api  Dockerfile.fs  Dockerfile.ui  docker-compose.dev.yml  docker-compose.yml
deploy/authelia/: .gitignore  configuration.yml  users_database.yml.example
deploy/helm/dlpscan/: Chart.yaml  README.md  values.yaml
deploy/helm/dlpscan/templates/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
deploy/helm/siphon/: .helmignore  Chart.yaml  README.md  values.yaml
deploy/k8s/: evadex.yaml
deploy/k8s/lab/: 00-namespace.yaml  05-postgres.yaml  06-postgres-secret.yaml  10-configmap-overrides.yaml  15-rbac-roller.yaml  20-siphon-api.yaml  25-siphon-ui.yaml  30-siphon-fs.yaml  35-siphon-nginx.yaml  40-ingress.yaml  README.md  evadex-lab.yaml  kind-cluster.yaml
deploy/nginx/: Dockerfile  nginx.conf
deployment/: cicd.md  docker.md  pre-commit.md
docs/: ARCHITECTURE.md  AUTHENTICATION.md  BENCHMARKS.md  CHANGELOG.md  CODESPACES.md  FORENSICS.md  KEYWORDS.md  PATTERNS.md  advanced_techniques.md  api-reference.md  dependency-audit-2026-04.md  dependency-audit.md  dlpscanrc.schema.json  evasion_defenses.md  evasion_techniques.md  siphonrc.schema.json
docs/architecture/: context-matching.md  extending.md  microservices.md  normalization.md  pipeline.md  validation.md  zero-trust.md
docs/baselines/: ABOUT-BASELINES.md  BASELINE-CONFIGURATION-REFERENCE.md  confidential-documents.md  index.md  phi-patterns.md  pii-keywords.md  pii.md
docs/deployment/: pypi.md
docs/enterprise/: api.md  audit.md  batch.md  classification.md  compliance.md  observability.md  rate-limiting.md  rbac.md  security.md  siem.md
docs/getting-started/: concepts.md  configuration.md  installation.md  quickstart.md
docs/wireframes/: IR-vs-C2.md  demo.html  siphon-c2-wireframes.html  siphon-c2.html  siphon-ir.html  siphon-shared.css  siphon-shared.js  sync-shared-into-ir.sh  sync-shared.sh
docs/wireframes/c2/surfaces/: pods.jsx
enterprise/: batch.md  env-config.md  observability.md  rbac.md  siem.md
evadex_outputs/: compare_v4.html  evadex-comparison-v3.md
examples/: grafana_dashboard.json
getting-started/: configuration.md  installation.md  quickstart.md
helm/dlpscan/: values.yaml
helm/dlpscan/templates/: _helpers.tpl  deployment.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml
packaging/: README.md  build-packages.sh  dlpscan.env.example  dlpscan.service  install.sh  siphon.env.example  siphon.service
rulesets/: comprehensive.yaml  confidential-docs.yaml  financial-internal.yaml  pci-production.yaml  phi-hipaa.yaml  pii-standard.yaml  secrets-cicd.yaml
scripts/: bump-version.sh  changelog.sh  check-semver.sh  check-version-sync.sh  codespace-deploy.sh  install-hooks.sh  lab-down.sh  lab-up.sh  reset-authelia-password.sh
src/: api.rs  audit.rs  batch.rs  bin_lookup.rs  cache.rs  compliance.rs  config.rs  edm.rs  entropy.rs  errors.rs  extractors.rs  http_util.rs  lib.rs  lsh.rs  main.rs  metrics.rs  models.rs  plugins.rs  policy.rs  profiles.rs  rbac.rs  redis_rate_limit.rs  scoring.rs  siem.rs  tui.rs  validation.rs  webhooks.rs
src/allowlist/: mod.rs
src/context/: keywords.rs  mod.rs
src/guard/: mod.rs  obfuscate.rs  presets.rs  tokenize.rs
src/normalize/: mod.rs
src/patterns/: mod.rs
src/pipeline/: mod.rs
src/scanner/: mod.rs
src/streaming/: mod.rs
tests/: audit_spec.rs  detection_quality.rs  encoding_diag.rs  evadex_regressions.rs  evasion_test.rs  forensics_test.rs  fp_probe.rs  integration_test.rs
tests/corpus/: labels.jsonl
tests/corpus/negatives/: asia_checksum_invalid_ids.txt  base64_non_sensitive.txt  crypto_checksum_invalid.txt  dates_not_ssn.txt  dea_checksum_invalid.txt  english_prose_clean.txt  eu_checksum_invalid_ids.txt  financial_checksum_invalid.txt  invoice_numbers_luhn_fail.txt  latam_checksum_invalid_ids.txt  middle_east_checksum_invalid_ids.txt  network_reserved_ranges.txt  new_luhn_checksum_invalid.txt  new_modular_checksum_invalid.txt  new_structural_invalid.txt  phones_implausible.txt  product_codes_9digit.txt  secret_placeholders.txt  url_credential_placeholders.txt  uuids_not_tokens.txt  vin_lookalikes.txt
ui/: .dockerignore  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/findings/: page.tsx
ui/app/scan/: page.tsx
ui/components/layout/: header.tsx  shell.tsx  sub-header.tsx
ui/components/ui/: badge.tsx  button.tsx  card.tsx  error-alert.tsx  input.tsx  separator.tsx
ui/lib/: api.ts  formatters.ts  utils.ts
(+60 files in other folders)
