[package]
name = "dlpscan"
version = "2.0.0"
edition = "2021"
description = "High-performance DLP scanner — detect, redact, and protect sensitive data"
license = "MIT"
rust-version = "1.75"

[dependencies]
# Core matching
regex = "1"
aho-corasick = "1.1"
once_cell = "1.19"

# Unicode
unicode-normalization = "0.1"

# String distance
strsim = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Parallelism
rayon = "1"

# Async runtime (for webhooks, SIEM, server)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"], optional = true }

# HTTP client (webhooks, SIEM adapters)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Crypto (EDM, token vault)
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = { version = "0.13", features = ["process"], optional = true }

# Config
toml = "0.8"

# Temp files (entropy extractor)
tempfile = "3"

# File extraction
pdf-extract = { version = "0.10", optional = true }
calamine = { version = "0.26", optional = true }
zip = "2"
quick-xml = { version = "0.37", optional = true }

# Archive extraction
sevenz-rust = { version = "0.6", optional = true }
unrar = { version = "0.5", optional = true }

# Data format extraction
parquet = { version = "53", optional = true, default-features = false, features = ["arrow"] }
arrow = { version = "53", optional = true, default-features = false, features = ["prettyprint"] }
rusqlite = { version = "0.32", optional = true, features = ["bundled"] }

# OLE2 (MSG files)
cfb = { version = "0.10", optional = true }

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }

[features]
default = ["metrics"]
metrics = ["dep:prometheus"]
pdf = ["dep:pdf-extract"]
office = ["dep:calamine", "dep:quick-xml"]
archives = ["dep:sevenz-rust", "dep:unrar"]
data-formats = ["dep:parquet", "dep:arrow", "dep:rusqlite"]
msg = ["dep:cfb"]
async-support = ["dep:tokio", "dep:reqwest"]
python = ["dep:pyo3"]
full = ["pdf", "office", "archives", "data-formats", "msg", "async-support", "metrics"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "scanning"
harness = false

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
