[workspace]
members = [".", "crates/siphon-core", "crates/siphon-api", "crates/siphon-fs", "crates/siphon-launcher"]
# Resolver v2 — per-member feature isolation. Without this, the
# workspace would unify features across every member, which means
# siphon's default `data-formats` (and therefore rusqlite) would
# leak into siphon-api's build and collide with sqlx's libsqlite3-sys
# link. v2 also matches what each member's `edition = "2021"`
# already implies; we just have to spell it explicitly at the
# workspace level.
resolver = "2"

[package]
name = "siphon"
version = "2.1.0"
edition = "2021"
description = "Polygon Siphon — high-performance DLP scanner to detect, redact, and protect sensitive data"
license = "MIT"
rust-version = "1.95"
homepage = "https://github.com/oxide11/dlpscan-rs"
repository = "https://github.com/oxide11/dlpscan-rs"
readme = "README.md"
keywords = ["dlp", "security", "compliance", "pii", "redaction"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# Siphon crates
siphon-core = { path = "crates/siphon-core", features = [] }

# Core matching
regex = "1"
aho-corasick = "1.1"
once_cell = "1.19"

# Unicode
unicode-normalization = "0.1"

# String distance
strsim = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Parallelism
rayon = "1"

# Async runtime (for webhooks, SIEM, server)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "signal", "time", "net"], optional = true }

# HTTP server (supports HTTP/1.1 and HTTP/2)
hyper = { version = "1", features = ["http1", "http2", "server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"], optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }

# HTTP client (webhooks, SIEM adapters)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Crypto (EDM, token vault)
hmac = "0.13"
sha2 = "0.11"
rand = "0.8"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Metrics
prometheus = { version = "0.14", default-features = false, features = ["process"], optional = true }

# Config
toml = "1.1"

# Temp files (entropy extractor)
tempfile = "3"

# File extraction
pdf-extract = { version = "0.10", optional = true }
calamine = { version = "0.34", optional = true }
zip = { version = "7", default-features = false, features = ["deflate"] }
quick-xml = { version = "0.39", optional = true }

# Archive extraction
sevenz-rust = { version = "0.6", optional = true }
unrar = { version = "0.5", optional = true }

# Data format extraction
parquet = { version = "58", optional = true, default-features = false, features = ["arrow"] }
arrow = { version = "54", optional = true, default-features = false, features = ["prettyprint"] }
rusqlite = { version = "0.39", optional = true, features = ["bundled"] }

# OLE2 (MSG files)
cfb = { version = "0.14", optional = true }

# Barcode / QR code decoding
rxing = { version = "0.8", optional = true }
image = { version = "0.25", optional = true }

# Python bindings
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }

# TUI (terminal UI)
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }

# YAML config
serde_yaml = { version = "0.9", optional = true }

# Redis (for distributed rate limiting)
redis = { version = "1.2", optional = true, default-features = false }

[features]
default = [
    "metrics",
    "barcode",
    "pdf",
    "office",
    "archives",
    "msg",
    "bin-data",
    "data-formats",
    "forensics",
]
metrics = ["dep:prometheus"]
pdf = ["dep:pdf-extract"]
office = ["dep:calamine", "dep:quick-xml"]
archives = ["dep:sevenz-rust", "dep:unrar"]
data-formats = ["dep:parquet", "dep:arrow", "dep:rusqlite"]
msg = ["dep:cfb"]
barcode = ["dep:rxing", "dep:image"]
bin-data = ["siphon-core/bin-data"]
# Forensic metadata + author attribution (`siphon analyze forensics`).
# Passthrough to siphon-core/forensics — zip + quick-xml + lopdf are
# already transitively present via office/pdf.
forensics = ["siphon-core/forensics"]
tui = ["dep:ratatui", "dep:crossterm"]
# SIEM forwarders (Splunk HEC, Elasticsearch, Syslog, Datadog, generic
# webhook). Ships its own synchronous HTTP client, so there are no
# extra runtime deps — gating the feature just excludes the ~628 LoC
# module from minimal builds and trims the public API surface.
siem = []
# Webhook notifier for scan findings. Same story as siem: self-
# contained, no extra deps, ~455 LoC excluded when disabled.
webhooks = []
async-support = ["dep:tokio", "dep:reqwest", "dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes"]
tls = ["async-support", "dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile"]
yaml-config = ["dep:serde_yaml"]
python = ["dep:pyo3"]
redis-rate-limit = ["dep:redis"]
full = ["pdf", "office", "archives", "data-formats", "msg", "barcode", "bin-data", "tui", "async-support", "metrics", "tls", "yaml-config", "siem", "webhooks", "redis-rate-limit", "forensics"]

[dev-dependencies]
criterion = "0.8"
tempfile = "3"
# Used by tests/forensics_test.rs to hand-roll OLE Compound files
# for the legacy .doc/.xls/.ppt extractor. `cfb` is already an
# optional runtime dep (behind `msg`); adding it here unconditionally
# keeps the test green on minimal builds too.
cfb = "0.14"

[[bench]]
name = "scanning"
harness = false

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1

# ---------------------------------------------------------------------------
# Linux packaging metadata (cargo-deb / cargo-generate-rpm)
#
# To build:
#   cargo install cargo-deb cargo-generate-rpm
#   cargo deb --features bin-data,metrics
#   cargo generate-rpm --features bin-data,metrics
#
# Or use the helper script: ./packaging/build-packages.sh
# ---------------------------------------------------------------------------

[package.metadata.deb]
maintainer = "dlpscan maintainers"
copyright = "2024-2026 dlpscan contributors"
license-file = ["LICENSE", "0"]
extended-description = """\
dlpscan is a high-performance Data Loss Prevention scanner that detects,
redacts, tokenizes, and protects sensitive data including credit card
numbers, SSNs, API keys, and 560+ other patterns across structured and
unstructured documents. Includes built-in REST API server, RBAC, audit
logging, and EDM/LSH for known-value matching."""
section = "utils"
priority = "optional"
depends = "$auto, libc6 (>= 2.17)"
assets = [
    ["target/release/dlpscan", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/dlpscan/README.md", "644"],
    ["LICENSE", "usr/share/doc/dlpscan/LICENSE", "644"],
    ["docs/getting-started/", "usr/share/doc/dlpscan/getting-started/", "644"],
    ["docs/enterprise/", "usr/share/doc/dlpscan/enterprise/", "644"],
    ["packaging/dlpscan.service", "lib/systemd/system/dlpscan.service", "644"],
    ["packaging/dlpscan.env.example", "etc/dlpscan/dlpscan.env.example", "644"],
]
conf-files = ["/etc/dlpscan/dlpscan.env.example"]

[package.metadata.generate-rpm]
license = "MIT"
summary = "High-performance DLP scanner with REST API"
assets = [
    { source = "target/release/dlpscan", dest = "/usr/bin/dlpscan", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/dlpscan/README.md", mode = "644", doc = true },
    { source = "LICENSE", dest = "/usr/share/doc/dlpscan/LICENSE", mode = "644", doc = true },
    { source = "packaging/dlpscan.service", dest = "/lib/systemd/system/dlpscan.service", mode = "644" },
    { source = "packaging/dlpscan.env.example", dest = "/etc/dlpscan/dlpscan.env.example", mode = "644", config = true },
]
auto-req = "no"

[package.metadata.generate-rpm.requires]
glibc = ">= 2.17"
