[package]
name = "siphon-api"
version = "2.1.0"
edition = "2021"
description = "Polygon Siphon API — sync HTTP scan service"
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "siphon-api"
path = "src/main.rs"

[dependencies]
siphon-core = { path = "../siphon-core" }

# HTTP server
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header", "limit"] }

# TLS
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Auth + security
sha2 = "0.10"
hex = "0.4"

# Misc
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
