[package]
name = "siphon-api"
version = "2.1.0"
edition = "2021"
description = "Polygon Siphon API — sync HTTP scan service"
license = "MIT"
rust-version = "1.82"

[[bin]]
name = "siphon-api"
path = "src/main.rs"

[dependencies]
siphon-core = { path = "../siphon-core" }
siphon = { path = "../.." }

# HTTP server
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header", "limit"] }

# TLS
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Auth + security
sha2 = "0.10"
hex = "0.4"

# Misc
uuid = { version = "1", features = ["v4"] }

# Phase 6 — kube-rs for auto-roll. Feature-gated so non-k8s builds
# stay lean. When the feature is off, /v1/overrides/roll responds
# with 501 and a helpful note pointing at the feature + manual
# `kubectl rollout restart` fallback.
kube = { version = "0.88", optional = true, default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.21", optional = true, features = ["latest"] }

[features]
default = []
# Enable POST /v1/overrides/roll end-to-end — includes the kube +
# k8s-openapi deps required to patch Deployment annotations.
k8s-roll = ["dep:kube", "dep:k8s-openapi"]

[dev-dependencies]
tempfile = "3"
