[package]
name = "siphon-api"
version = "2.3.0"
edition = "2021"
description = "Polygon Siphon API — sync HTTP scan service"
license = "MIT"
rust-version = "1.95"

[[bin]]
name = "siphon-api"
path = "src/main.rs"

[dependencies]
siphon-core = { path = "../siphon-core" }
# Drop the root crate's default features here — siphon-api doesn't
# need any of the file-format extractors (PDF, Office, archives,
# data-formats, forensics, barcode, bin-data) or the embedded msg
# parser. They're owned by siphon-fs / siphon CLI. Pulling them in
# brought rusqlite (via data-formats), which collides with sqlx's
# libsqlite3-sys link at the cargo links-graph layer.
#
# `metrics` stays on because main.rs's ApiMetrics surface uses it.
# Add back any other feature here if the binary refuses to compile.
siphon = { path = "../..", default-features = false, features = ["metrics"] }

# HTTP server
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "set-header", "limit"] }

# TLS
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = "0.23"
rustls-pemfile = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Auth + security
sha2 = "0.11"
hex = "0.4"

# Misc
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"

# File watcher for SIPHON_OVERRIDES_PATH hot-reload
notify = "8"

# Persistence — Postgres connection pool. Marked optional in the
# code path (AppState carries Option<Pool> and every DB touch is
# guarded) so siphon-api still serves /scan / /v1/* when
# SIPHON_DATABASE_URL is unset or Postgres is unreachable.
#
# Why tokio-postgres + deadpool, not sqlx: sqlx's umbrella crate
# unconditionally depends on sqlx-sqlite, which carries
# `links = "sqlite3"` against libsqlite3-sys = "0.28" — collides
# with rusqlite's libsqlite3-sys = "0.37" in the workspace dep
# graph. tokio-postgres is pure-Rust, no libsqlite3-sys, no conflict.
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"
chrono = { version = "0.4", features = ["serde"] }

# Phase 6 — kube-rs for auto-roll. Feature-gated so non-k8s builds
# stay lean. When the feature is off, /v1/overrides/roll responds
# with 501 and a helpful note pointing at the feature + manual
# `kubectl rollout restart` fallback.
kube = { version = "4.0", optional = true, default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.28", optional = true, features = ["v1_32"] }

[features]
default = []
# Enable POST /v1/overrides/roll end-to-end — includes the kube +
# k8s-openapi deps required to patch Deployment annotations.
k8s-roll = ["dep:kube", "dep:k8s-openapi"]

[dev-dependencies]
tempfile = "3"
