[package]
name = "siphon-core"
version = "2.1.1"
edition = "2021"
description = "Polygon Siphon scanner engine — patterns, validators, and detection pipeline"
license = "MIT"
rust-version = "1.95"

[dependencies]
regex = "1"
aho-corasick = "1.1"
once_cell = "1.19"
unicode-normalization = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
base64 = "0.22"
tracing = "0.1"
toml = "1.1"
strsim = "0.11"
rand = "0.8"

# Forensics — Office container parsing (docx/xlsx/pptx treat as ZIP
# + XML) and PDF metadata dictionary access. All three are already
# in the root crate's dep graph via the office/pdf features; pulling
# them in here just surfaces the typed APIs.
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }
quick-xml = { version = "0.39", optional = true }
lopdf = { version = "0.40", optional = true, default-features = false }
# OLE Compound File Binary Format — backs the legacy .doc/.xls/.ppt
# metadata extractor (SummaryInformation / DocumentSummaryInformation
# streams). Already in the dep graph via the root crate's `msg`
# feature; optional here so non-forensics builds skip it.
cfb = { version = "0.14", optional = true }

[features]
bin-data = []
# Forensics metadata extraction (docx/xlsx/pptx cores + PDF Info
# dict). Gated so minimal builds that only need scanning don't pay
# the ~3 MB of extra object code.
forensics = ["dep:zip", "dep:quick-xml", "dep:lopdf", "dep:cfb"]

[dev-dependencies]
tempfile = "3"
