[package]
name = "siphon-fs"
version = "2.1.0"
edition = "2021"
description = "Polygon Siphon FS — file-scanner HTTP service (multipart in, findings out)"
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "siphon-fs"
path = "src/main.rs"

[dependencies]
siphon-core = { path = "../siphon-core" }

# HTTP server — same axum/tokio stack as siphon-api so the two pods
# share observability patterns and it's easy to crib fixes across.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
uuid = { version = "1", features = ["v4"] }
