[package]
name = "siphon-fs"
version = "1.0.0"
edition = "2021"
description = "Polygon Siphon FS — file-scanner HTTP service (multipart in, findings out)"
license = "MIT"
rust-version = "1.95"

[[bin]]
name = "siphon-fs"
path = "src/main.rs"

[dependencies]
siphon-core = { path = "../siphon-core" }
# Pull the root siphon crate for its extractors (PDF, DOCX, RTF,
# archives, etc.). Default features already enable PDF + Office +
# archives + data-formats so siphon-fs has the same ingest coverage
# as the CLI.
siphon = { path = "../.." }
# Temp files for extractor calls — extractors take file paths; the
# handler drops bytes into a NamedTempFile then passes the path in.
tempfile = "3"

# HTTP server — same axum/tokio stack as siphon-api so the two pods
# share observability patterns and it's easy to crib fixes across.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Auth + crypto — SHA-256 for file content hashing before persistence.
sha2 = "0.11"

# Persistence — same pool stack as siphon-api (tokio-postgres + deadpool).
# Optional at runtime: pool is None when SIPHON_DATABASE_URL is unset.
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = "0.14"

# Misc
uuid = { version = "1", features = ["v4"] }
